Solved HUNO-533: In AppoinmentList, horizontal scroll is not visible and last two columns are not visible properly

--- a/src/admin/assets/css/style.css
+++ b/src/admin/assets/css/style.css
@@ -5748,7 +5748,7 @@ input#menu[type="checkbox"] {
 }
 
 .ant-table-content{
-  overflow: visible !important;  
+  overflow: auto !important;  
 }
 .ant-table{
   z-index: 2 !important;
